[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/System/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontDlg.tres" type="DynamicFont" id=2]
[ext_resource path="res://Instances/System/Button.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.51572, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.51572, 1 ),
"update": 0,
"values": [ Vector2( 55, 15 ), Vector2( 55, 15 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Select"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:idle_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, -1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:idle_y")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:hover_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hover_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 31, 8 )

[sub_resource type="Animation" id=9]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.51572, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.51572, 1 ),
"update": 0,
"values": [ Vector2( 55, 15 ), Vector2( 55, 15 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Select"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:idle_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, -1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:idle_y")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath(".:hover_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hover_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0 ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 24, 8 )

[sub_resource type="Animation" id=14]
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath("CanvasLayer/Button1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CanvasLayer/Button2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CanvasLayer/Button3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Bg:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0823529, 0.156863, 0.333333, 0 ), Color( 0.0823529, 0.156863, 0.333333, 0.784314 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Polygon2D:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 0.420448, 1 ),
"update": 0,
"values": [ Vector2( 180, 100 ), Vector2( 130, 50 ), Vector2( 80, 18 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Polygon2D2:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 0.420448, 1 ),
"update": 0,
"values": [ Vector2( -50, -50 ), Vector2( -50, -50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Disappear"
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath("CanvasLayer/Button1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "anim_not_selected"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CanvasLayer/Button2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "anim_not_selected"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CanvasLayer/Button3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "anim_not_selected"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Bg:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0823529, 0.156863, 0.333333, 0.784314 ), Color( 0.0823529, 0.156863, 0.333333, 0.784314 ), Color( 0.0823529, 0.156863, 0.333333, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Polygon2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 2.07053, 1 ),
"update": 0,
"values": [ Vector2( 80, 18 ), Vector2( 80, 18 ), Vector2( 180, 100 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Polygon2D2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 2.07053, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -50, -50 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Bg" type="ColorRect" parent="CanvasLayer"]
margin_left = 80.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 162.0
mouse_filter = 2
color = Color( 0.0823529, 0.156863, 0.333333, 0.784314 )

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer"]
position = Vector2( 80, 18 )
color = Color( 0.164706, 0.258824, 0.494118, 1 )
polygon = PoolVector2Array( 160, 98, 120, 130, 56, 146, 168, 146, 168, 98 )

[node name="Label" type="Label" parent="CanvasLayer/Polygon2D"]
margin_left = 125.0
margin_top = 130.0
margin_right = 200.0
margin_bottom = 144.0
rect_rotation = -12.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.619608, 0.733333, 1, 1 )
text = "Menu"

[node name="Polygon2D2" type="Polygon2D" parent="CanvasLayer"]
color = Color( 0.25098, 0.396078, 0.741176, 1 )
polygon = PoolVector2Array( 135, 15, 98, 30, 78, 98, 70, 12 )

[node name="Button1" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 160, 52 )
polygon = PoolVector2Array( 37, 23, 78, 23, 82, 7, 30, 7 )
button_text = "Save"
choice_button = false

[node name="CollisionShape2D" parent="CanvasLayer/Button1/AreaHover" index="0"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="Button2" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 159, 85 )
polygon = PoolVector2Array( 24, 23, 81, 23, 86, 7, 27, 7 )
button_text = "Options"
choice_button = false

[node name="AnimationPlayer" parent="CanvasLayer/Button2" index="2"]
anims/Disappear = SubResource( 3 )
anims/Select = SubResource( 4 )

[node name="AnimationPlayerIdle" parent="CanvasLayer/Button2" index="3"]
anims/Idle = SubResource( 5 )

[node name="AnimationPlayerHover" parent="CanvasLayer/Button2" index="4"]
anims/Hover = SubResource( 6 )

[node name="CollisionShape2D" parent="CanvasLayer/Button2/AreaHover" index="0"]
shape = SubResource( 7 )

[node name="Button3" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 160, 123 )
polygon = PoolVector2Array( 36, 22, 79, 22, 75, 5, 33, 6 )
button_text = "Exit"
choice_button = false

[node name="AnimationPlayer" parent="CanvasLayer/Button3" index="2"]
anims/Disappear = SubResource( 9 )
anims/Select = SubResource( 10 )

[node name="AnimationPlayerIdle" parent="CanvasLayer/Button3" index="3"]
anims/Idle = SubResource( 11 )

[node name="AnimationPlayerHover" parent="CanvasLayer/Button3" index="4"]
anims/Hover = SubResource( 12 )

[node name="CollisionShape2D" parent="CanvasLayer/Button3/AreaHover" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Appear"
anims/Appear = SubResource( 14 )
anims/Disappear = SubResource( 15 )
[connection signal="clicked" from="CanvasLayer/Button1" to="." method="_on_Button_clicked"]
[connection signal="clicked" from="CanvasLayer/Button2" to="." method="_on_Button2_clicked"]
[connection signal="clicked" from="CanvasLayer/Button3" to="." method="_on_Button3_clicked"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="CanvasLayer/Button1"]

[editable path="CanvasLayer/Button2"]

[editable path="CanvasLayer/Button3"]
